--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section class="main-content">
-      <p>hello</p>
+      <p><h3>hello</p>
 
       <footer class="site-footer">
 
