--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 
 <head>
-    <title>Resume - Jaehyeon Kim</title>
+    <title>Resume - Dmytro Danylyk</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content="mobile, android, articles, posts, development, java"/>
 
@@ -35,18 +35,30 @@
 <body>
 <div class="container">
 
-	<h1>김 재 현</h1>
+	<h1>Dmytro Danylyk</h1>
 
 	<div>
 
-        <p class="date">제주 대학교 컴퓨터 공학과 11 학번 김재현</p>
+        <p class="date">Android Platform Software Developer</p>
 
         <!--Social-->
         <div id="share-buttons" style="text-align: right">
 
             <!-- Facebook -->
-            <a href="https://www.facebook.com/replaykim" target="_blank">
+            <a href="https://www.facebook.com/dmytrodanylyk" target="_blank">
                 <img src="assets/images/social/facebook.png" alt="Facebook"/></a>
+
+            <!-- Twitter -->
+            <a href="https://twitter.com/dmytrodanylyk" target="_blank">
+                <img src="assets/images/social/twitter.png" alt="Twitter"/></a>
+
+            <!-- Google+ -->
+            <a href="https://plus.google.com/+DmytroDanylyk" target="_blank">
+                <img src="assets/images/social/google_plus.png" alt="Google"/></a>
+
+            <!-- LinkedIn -->
+            <a href="http://www.linkedin.com/pub/dmytro-danylyk/73/53b/9a4" target="_blank">
+                <img src="assets/images/social/linkedin.png" alt="LinkedIn"/></a>
 
         </div>
 
@@ -54,11 +66,13 @@
 
 	<hr>
 
-    <div><img class="avatar" src="https://www.facebook.com/photo.php?fbid=576708145774915&set=a.103358363109898.6655.100003072035377&type=1&source=11"/></div>
+    <div><img class="avatar" src="assets/images/resume/avatar.png"/></div>
 
-    <p><strong>E-Mail:</strong> replaykim123 [at] gmail [dot] com</p>
+    <p><strong>E-Mail:</strong> dmytrodanylyk [at] gmail [dot] com</p>
 
-   
+    <p><strong>Twitter:</strong> dmytrodanylyk</p>
+
+    <p><strong>Skype:</strong> dmytrodanylyk</p>
 
     <h2>ABOUT ME</h2>
 
