--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 
 <head>
-    <title>Resume - Dmytro Danylyk</title>
+    <title>Resume - 김재현</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content="mobile, android, articles, posts, development, java"/>
 
@@ -35,30 +35,18 @@
 <body>
 <div class="container">
 
-	<h1>Dmytro Danylyk</h1>
+	<h1>김재현</h1>
 
 	<div>
 
-        <p class="date">Android Platform Software Developer</p>
+        <p class="date">제주대학교 컴퓨터공학과 2학년</p>
 
         <!--Social-->
         <div id="share-buttons" style="text-align: right">
 
             <!-- Facebook -->
-            <a href="https://www.facebook.com/dmytrodanylyk" target="_blank">
-                <img src="assets/images/social/facebook.png" alt="Facebook"/></a>
-
-            <!-- Twitter -->
-            <a href="https://twitter.com/dmytrodanylyk" target="_blank">
-                <img src="assets/images/social/twitter.png" alt="Twitter"/></a>
-
-            <!-- Google+ -->
-            <a href="https://plus.google.com/+DmytroDanylyk" target="_blank">
-                <img src="assets/images/social/google_plus.png" alt="Google"/></a>
-
-            <!-- LinkedIn -->
-            <a href="http://www.linkedin.com/pub/dmytro-danylyk/73/53b/9a4" target="_blank">
-                <img src="assets/images/social/linkedin.png" alt="LinkedIn"/></a>
+            <a href="https://www.facebook.com/replaykim" target="_blank">
+                <img src="assets/facebook.png" alt="Facebook"/></a>
 
         </div>
 
