--- a/index.html
+++ b/index.html
@@ -54,13 +54,10 @@
 
 	<hr>
 
-    <div><img class="avatar" src="assets/images/resume/avatar.png"/></div>
+    <div><img class="avatar" src="assets/mypicture.jpg"/></div>
 
-    <p><strong>E-Mail:</strong> dmytrodanylyk [at] gmail [dot] com</p>
+    <p><strong>E-Mail:</strong> replaykim123 [at] gmail [dot] com</p>
 
-    <p><strong>Twitter:</strong> dmytrodanylyk</p>
-
-    <p><strong>Skype:</strong> dmytrodanylyk</p>
 
     <h2>ABOUT ME</h2>
 
