--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <h2>ABOUT ME</h2>
 
     <p class="intro">
-        He is a conservative geek. After finishing school he has focused on it-technologies. No one seen him from this time. It can freely be said that he's in it always, except
-        when he's asleep of course, but maybe even then, who knows?! </p>
+        안녕하세요. 컴퓨터 공학과 2학년 11학번 김재현 입니다. 
+        저는 제주제일 고등학교를 졸업하고 2011년에 제주대학교 컴퓨터 공학과에 진학했습니다. </p>
 
     <p class="intro">
         He enjoys learning and creating something new. He wants everything look great. He's a perfectionist with sense for details. He ensures the quality and high professionalism
