--- a/index.html
+++ b/index.html
@@ -66,177 +66,43 @@
         저는 제주제일 고등학교를 졸업하고 2011년에 제주대학교 컴퓨터 공학과에 진학했습니다. </p>
 
     <p class="intro">
-        He enjoys learning and creating something new. He wants everything look great. He's a perfectionist with sense for details. He ensures the quality and high professionalism
-        in everything he does. One word - programmer. </p>
-
-    <h2>EXPERIENCE / PERSONAL SKILLS</h2>
-
-    <ul>
-        <li>Experience with Android application development using Android SDK</li>
-        <li>Expert knowledge of Java</li>
-        <li>Good knowledge of Object Oriented concepts and a strong passion for software development</li>
-        <li>3+ years of experience as a developer</li>
-        <li>Understanding of mobile UX and design best practices</li>
-        <li>Excellent attention to detail</li>
-        <li>Self-motivated to explore new technologies, applications and environments</li>
-        <li>Fully comfortable working in English, both in writing and spoken</li>
-    </ul>
-
-    <h2>ANDROID SKILLS</h2>
-
-    <ul>
-        <li>Excellent knowledge of the Android SDK</li>
-        <li>Design Patterns</li>
-        <li>UI customization</li>
-        <li>Data storage</li>
-        <li>SQLite</li>
-        <li>Social network sharing</li>
-        <li>Media</li>
-        <li>Location & Maps</li>
-        <li>Sensors Usage</li>
-        <li>Google Play Services</li>
-        <li>Widgets</li>
-        <li>Performance optimization</li>
-        <li>Kindle Fire / Nook Tablet</li>
-        <li>Prototype apps</li>
-        <li>Unit Testing</li>
-        <li>Chromecast</li>
-    </ul>
-
-
-    <h2>KEY RESPONSIBILITIES</h2>
-
-    <h4>Lemberg Solutions Limited</h4>
-
-    Position - Software Engineer
-
-    <ul>
-        <li>Development of mobile Android based apps</li>
-        <li>On-going maintenance of existing projects</li>
-        <li>Translating requirements and mock-ups into fully functioning features</li>
-        <li>Providing estimates on development cycles</li>
-        <li>Partnering with designers to help define and implement User Interface improvements</li>
-        <li>Working with team members on server-side integration</li>
-        <li>Working on project without detailed instructions</li>
-        <li>Project management and communication</li>
-    </ul>
-
-    <h4>just.me, Inc</h4>
-
-    Position - UI Engineer
-
-    <ul>
-        <li>Animations</li>
-        <li>Android User Interface</li>
-        <li>Effective Navigation: Navigation Drawer & Fragments</li>
-        <li>Custom Components</li>
-        <li>Adaptive UI Flows</li>
-        <li>Supporting Different Screen Sizes / Densities / Orientation</li>
-    </ul>
-
-    <h4>Finalist of Google Apps Developer Challenge 2012</h4>
-
-    Position - Android Developer
-
-    <p>Project <a href="http://www.google.com/events/gcdc2013/finalists2012.html">Deedle</a> - is a social project which encourage people to share things they have done. Deedle is created using the
-        whole bucket of amazing things, that Google offers to developers for free.</p>
-
-    <p>For example when you login you just need to select one of your phone google accounts, no need to type login or password. Our application already know your name, hometown,
-        photo and display all this information.
+        저는 성격이 밝고 다른 사람들과 만나고 얘기하는 것을 좋아합니다. 사진 찍는것을 좋아하고 여행다니는 것을 좋아합니다. 
+        작년에는 뉴질랜드로 워킹 홀리데이도 다녀왔고 거기서도 많은 사람들과 만나서 많은 얘기를 나눴고 잊을수 없는 좋은 경험을
+        했습니다. </p>
+        
+    <p class="intro">
+    	저는 아직 프로그래밍의 기초를 배우고 있습니다. 개발 경험은 없지만 기회가 된다면 
+    	누구보다 열심히 자신이있고 프로그래밍에 대한 열망이 커서 모르는것도  빠르게 배울 자신이 있습니다.
+    	저와 함께 프로젝트를 하신다면 후회하시지 않을 것입니다.
     </p>
 
-    <p>When you share your deed, all information is stored on your Google Drive and is available for download. You can add location to your deed and it will be displayed in our
-        deed map view.
-    </p>
-
-    <p>
-        Check-out some screenshots <a href="http://shykiriavyi.com/portfolio/4">here.</a>
-    </p>
-
-    <h2>BACKGROUND</h2>
+    <h2>EXPERIENCE</h2>
 
     <ul>
-        <li>Big fun of <a href="http://stackoverflow.com/users/1056263/dmytro-danylyk?tab=reputation">stackoverflow</a> with more than 5000 reputation.</li>
-        <li>In love with <a href="http://git-scm.com/">Git</a> and <a href="http://www.jetbrains.com/idea/">IntelliJ IDEA</a>.</li>
-        <li>Passed interview and worked on <a href="http://www.just.me/">just.me</a> project with
-            <a href="http://www.linkedin.com/profile/view?id=29359&authType=name&authToken=JkG4&trk=prof-connections-name">Kevin Nilson</a>.
-        </li>
-        <li>Participating in <a href="http://lviv.gdg.org.ua/">Google Developers Group Lviv</a> and
-            <a href="http://www.devfest.info/event/ag9zfmRldmZlc3RnbG9iYWxyDQsSBUV2ZW50GKnAAgw">DevFest Ukraine</a>.
-        </li>
-        <li>Author of technical articles for <a href="http://androidweekly.net/">androidweekly.net</a>, <a href="http://blog.lemberg.co.uk/blog/dmytro-danylyk">blog.lemberg.co.uk</a>.
-        </li>
-        <li>Bachelor's degree, Computer Science - Lviv National Polytechnic University. (Who cares?)</li>
+        <li>2015.3 ~  제주대학교 컴퓨터 공학과 복학</li>
+        <li>2014.5.20 ~ 2015.2.12 뉴질랜드 워킹 홀리데이</li>
+        <li>2012.2.13 ~ 2013.11.12 대한민국 육군 통신병</li>
+        <li>2011.3 ~ 2011.12 제주대학교 컴퓨터 공학과 1학년 </li>
+        <li>2011.2 제주 제일 고등학교 졸업</li>
+       
     </ul>
 
-    <h2>APPLICATIONS</h2>
+    <h2>INTERESTS</h2>
 
     <ul>
-    	    <li><a href="http://shykiriavyi.com/portfolio/4">Deedle</a></li>
-	    <li><a href="https://play.google.com/store/apps/details?id=com.premiumwidgets.free">Free Widgets</a></li>
-	    <li><a href="https://play.google.com/store/apps/details?id=com.premiumwidgets">Widgets & Weather Premium</a></li>
-	    <li><a href="https://play.google.com/store/apps/details?id=ie.slice.mylottoireland">Irish Lotto</a></li>
-	    <li><a href="https://play.google.com/store/apps/details?id=nl.moboa.Declaree">Declaree</a>
-	    <li><a href="https://play.google.com/store/apps/details?id=com.fm.iseemore">ISEEMORE</a>
-	    <li><a href="https://play.google.com/store/apps/details?id=com.ls.skiresort.mthigh">Mountain High</a></li>
-	    <li><a href="https://play.google.com/store/apps/details?id=me.just.android">just.me</a></li>
-	    <li><a href="https://play.google.com/store/apps/details?id=com.ls.sc">SnoCountry Ski & Snow Reports</a></li>
-	    <li><a href="https://play.google.com/store/apps/details?id=com.ls.nc">BP Oman</a></li>
-	    <li><a href="https://play.google.com/store/apps/details?id=com.mykatch">Katch</a></li>
-	    <li><a href="https://play.google.com/store/apps/details?id=com.parrot.freeflight">AR.FreeFlight (assist in development)</a></li>
-    	    <li>... a lot more are under <a href="http://en.wikipedia.org/wiki/Non-disclosure_agreement">NDA</a></li>
+        <li>배낭 여행</li>
+        <li>사진 찍기</li>
+        <li>안드로이드 앱 개발</li>
+        <li>음악 감상</li>
 
     </ul>
 
-    <h2>ARTICLES</h2>
 
-    <ul>
-    	<li><a href="https://github.com/dmytrodanylyk/dmytrodanylyk/blob/gh-pages/articles/Concurrent%20Database%20Access.md">Concurrent Database Access</a></li>
-	<li><a href="https://github.com/dmytrodanylyk/dmytrodanylyk/blob/gh-pages/articles/volley-part-1.md">Volley Part 1 - Quickstart</a></li>
-	<li><a href="https://github.com/dmytrodanylyk/dmytrodanylyk/blob/gh-pages/articles/volley-part-2.md">Volley Part 2 - Application Model</a></li>
-	<li><a href="https://github.com/dmytrodanylyk/dmytrodanylyk/blob/gh-pages/articles/volley-part-3.md">Volley Part 3 - Image Loader</a></li>
-	<li><a href="https://github.com/dmytrodanylyk/dmytrodanylyk/blob/gh-pages/articles/volley-part-4.md">Volley Part 4 - Common Questions</a></li>
-	<li><a href="https://github.com/dmytrodanylyk/dmytrodanylyk/blob/gh-pages/articles/surface-view-intro.md">Surface View - Intro</a></li>
-	<li><a href="https://github.com/dmytrodanylyk/dmytrodanylyk/blob/gh-pages/articles/surface-view-play-video.md">Surface View - Playing video</a></li>
-	<li><a href="https://github.com/dmytrodanylyk/dmytrodanylyk/blob/gh-pages/articles/surface-view-video-cropping.md">Surface View - Video Cropping</a></li>
-	<li><a href="https://github.com/dmytrodanylyk/dmytrodanylyk/blob/gh-pages/articles/Unwritten%20Requirements.md">Android Development Unwritten Requirements</a></li>
-	<li><a href="http://blog.lemberg.co.uk/googles-gift-android-studio">Google's Gift: Android Studio</a></li>
-	<li><a href="http://blog.lemberg.co.uk/androiddev-people-you-should-follow">AndroidDev people you should follow</a></li>
-    </ul>
+    <h2>LANGUAGE</h2>
 
-    <h2>PRESENTATIONS</h2>
+    <h4>C   C++   JAVA</h4>
 
-   <ul>
-    	<li><a href="http://slid.es/dmytrodanylyk/android-development-choose-right-ide">Android development: Choose right IDE</a></li>
-	<li><a href="http://slid.es/dmytrodanylyk/gdg-dev-fest">GDG Dev Fest</a></li>
-   </ul>
-
-    <h2>FAVORITE BOOKS</h2>
-
-    <h5>Thinking in Java</h5>
-    Bruce Eckel
-
-    <h5>Java 2 The Complete Reference, Fifth Edition</h5>
-    Herbert Schildt
-
-    <h5>Effective Java</h5>
-    Joshua Bloch
-
-    <h5>Java Concurrency in Practice</h5>
-    Brian Goetz, Tim Peierls, Joshua Bloch, Joseph Bowbeer, David Holmes, Doug Lea
-
-    <h5>Head First Design Patterns</h5>
-    Elisabeth Freeman, Eric Freeman, Bert Bates, Kathy Sierra, Elisabeth Robson
-
-    <h5>The Java Tutorial - A Short Course on the Basics, 4th Edition</h5>
-    Sharon Zakhour, Scott Hommel, Jacob Royal, Isaac Rabinovitch, Tom Risser
-
-    <h5>Agile Software Development, Principles, Patterns, and Practices</h5>
-    Robert C. Martin
-
-    <h5>The Clean Coder</h5>
-    Robert C. Martin
-
+  
 </div>
 </body>
 
