--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         
     <p class="intro">
     	저는 아직 프로그래밍의 기초를 배우고 있습니다. 개발 경험은 없지만 기회가 된다면 
-    	누구보다 열심히 자신이있고 프로그래밍에 대한 열망이 커서 모르는것도  빠르게 배울 자신이 있습니다.
+    	누구보다 열심히할 자신이있고 프로그래밍에 대한 열망이 커서 모르는것도  빠르게 배울 자신이 있습니다.
     	저와 함께 프로젝트를 하신다면 후회하시지 않을 것입니다.
     </p>
 
