--- a/index.html
+++ b/index.html
@@ -1,118 +1,12 @@
-<!doctype html>
-
-<html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Resume - 김재현 </title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="keywords" content="mobile, android, articles, posts, development, java"/>
-
-    <link rel="stylesheet" type="text/css" href="assets/main.css">
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic' rel='stylesheet' type='text/css'>
-
-    <!--Google Analytics start-->
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-44382495-1', 'dmytrodanylyk.github.io');
-        ga('send', 'pageview');
-
-    </script>
-    <!--Google Analytics end-->
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Replay</title>
 </head>
-
 <body>
-<div class="container">
 
-	<h1>김재현</h1>
-
-	<div>
-
-        <p class="date">제주대학교 컴퓨터공학과 2학년</p>
-
-        <!--Social-->
-        <div id="share-buttons" style="text-align: right">
-
-            <!-- Facebook -->
-            <a href="https://www.facebook.com/replaykim" target="_blank">
-                <img src="assets/facebook.png" alt="Facebook"/></a>
-
-        </div>
-
-    </div>
-
-	<hr>
-
-    <div><img class="avatar" src="assets/mypicture.jpg"/></div>
-
-    <p><strong>E-Mail:</strong> replaykim123 [at] gmail [dot] com</p>
-
-
-    <h2>ABOUT ME</h2>
-
-    <p class="intro">
-        안녕하세요. 컴퓨터 공학과 2학년 11학번 김재현 입니다. 
-        저는 제주제일 고등학교를 졸업하고 2011년에 제주대학교 컴퓨터 공학과에 진학했습니다. </p>
-
-    <p class="intro">
-        저는 성격이 밝고 다른 사람들과 만나고 얘기하는 것을 좋아합니다. 사진 찍는것을 좋아하고 여행다니는 것을 좋아합니다. 
-        작년에는 뉴질랜드로 워킹 홀리데이도 다녀왔고 거기서도 많은 사람들과 만나서 많은 얘기를 나눴고 잊을수 없는 좋은 경험을
-        했습니다. </p>
-        
-    <p class="intro">
-    	저는 아직 프로그래밍의 기초를 배우고 있습니다. 개발 경험은 없지만 기회가 된다면 
-    	누구보다 열심히할 자신이있고 프로그래밍에 대한 열망이 커서 모르는것도  빠르게 배울 자신이 있습니다.
-    	저와 함께 프로젝트를 하신다면 후회하시지 않을 것입니다.
-    </p>
-
-    <h2>EXPERIENCE</h2>
-
-    <ul>
-        <li>2015.3 ~  제주대학교 컴퓨터 공학과 복학</li>
-        <li>2014.5.20 ~ 2015.2.12 뉴질랜드 워킹 홀리데이</li>
-        <li>2012.2.13 ~ 2013.11.12 대한민국 육군 통신병</li>
-        <li>2011.3 ~ 2011.12 제주대학교 컴퓨터 공학과 1학년 </li>
-        <li>2011.2 제주 제일 고등학교 졸업</li>
-       
-    </ul>
-
-    <h2>INTERESTS</h2>
-
-    <ul>
-        <li>배낭 여행</li>
-        <li>사진 찍기</li>
-        <li>안드로이드 앱 개발</li>
-        <li>음악 감상</li>
-
-    </ul>
-
-
-    <h2>LANGUAGE</h2>
-
-    <h4>C   C++  </h4>
-
-  
-</div>
 </body>
-
-<!--Make all links open in new window start-->
-<script>
-    var all_links = document.getElementsByTagName('a');
-    for (var i = 0, len = all_links.length; i < len; i++) {
-        all_links[i].target = "_blank";
-    }
-</script>
-<!--Make all links open in new window end-->
-
 </html>
