--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Replay</title>
-</head>
-<body>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/main.css">
+    <title>Replay</title>
+</head>
+
+<body>
+    <div class="container">
+        <h1>Jaehyeon Kim</h1>
+        <ul>
+            <li>About me</li>
+            <li>Projects</li>
+            <li>Working Holiday</li>
+            <li>etc</li>
+        </ul>
+    </div>
 </body>
+
 </html>
