--- a/index.html
+++ b/index.html
@@ -5,20 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./assets/main.css">
     <title>Replay</title>
 </head>
 
 <body>
-    <div class="container">
-        <h1>Jaehyeon Kim</h1>
-        <ul>
-            <li>About me</li>
-            <li>Projects</li>
-            <li>Working Holiday</li>
-            <li>etc</li>
-        </ul>
-    </div>
-</body>
+  <div class="jumbotron text-center">
+  <h1>WHO AM I ?</h1>
+  <p>Portfolio</p>
+</div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Project</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Education</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Awards</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+  </div>
+</div>
+    <script src="app.js"></script>
+</body>
 </html>
