--- a/index.html
+++ b/index.html
@@ -20,20 +20,25 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
+      <h3>Cover Letter</h3>
+      <p>자기소개서</p>
+      <br>
+    </div>
+    <div class="col-sm-3">
       <h3>Project</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p>지금까지 진행 했던 프로젝트</p>
+      <br>
     </div>
-    <div class="col-sm-4">
-      <h3>Education</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    <div class="col-sm-3">
+      <h3>Education & Certificate</h3>
+      <p>교육 & 자격증</p>
+      <br>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <h3>Awards</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <p>수상 경력</p>
+      <br>
     </div>
   </div>
 </div>
