--- a/index.html
+++ b/index.html
@@ -6,43 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/custom.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./assets/main.css">
     <title>Replay</title>
 </head>
 
 <body>
-    <a href="###">
+    <a href="/index.html">
         <div class="jumbotron text-center">
             <h1>WHO AM I ?</h1>
             <p>Portfolio</p>
         </div>
     </a>
+
     <div class="container">
         <div class="row">
-            <a href="###">
+            <a href="Coverletter.html">
                 <div class="col-sm-3">
                     <h3>Cover Letter</h3>
                     <p>자기소개서</p>
                     <br>
                 </div>
             </a>
-            <a href="###">
+            <a href="Project.html">
                 <div class="col-sm-3">
                     <h3>Project</h3>
-                    <p>지금까지 진행 했던 프로젝트</p>
+                    <p>진행 했던 프로젝트</p>
                     <br>
                 </div>
             </a>
-            <a href="###">
+            <a href="EducationCertificate.html">
                 <div class="col-sm-3">
                     <h3>Education & Certificate</h3>
                     <p>교육 & 자격증</p>
                     <br>
                 </div>
             </a>
-            <a href="###">
+            <a href="Awards.html">
                 <div class="col-sm-3">
                     <h3>Awards</h3>
                     <p>수상 경력</p>
