--- a/Project.html
+++ b/Project.html
@@ -27,7 +27,8 @@
               <li role="presentation"><a href="Awards.html">Awards</a></li>
           </ul>
 
-    <ul>
+    <nav>
+         <ul>
       <li>2015 스마트모빌</li>
       <li>2015 스페셜 캘린더</li>
       <li>2016 왓수다</li>
@@ -35,6 +36,22 @@
       <li>2016 스마트 카트</li>
       <li>2017 썸띵라잌댓</li>
       <li>2017 ??</li>
+    </ul>
+    </nav>
+
+
+    <ul class="container">
+      <li><h4>2015 스마트모빌</h4>
+        <div> <img src="assets/facebook.png" alt="스마트 모빌 상장">
+        라즈베리파이를 이용한 스마트 모빌이다. 인체감지 센서를 이용해 아기가 움직이면 모빌이 자동으로 돌아가고 자장가가 나오고, 휴대폰에서 직접 아이의 모습을 실시간으로 스트리밍 해줄 수 있다. 이 프로젝트에서 나는 라즈베리파이에 들어가는 소프트웨어 부분을 파이썬으로 작성하고, 라즈베리파이와 아두이노의 하드웨어적인 부분도 제작했다. 대학교 2학년에 처음으로 시작한 프로젝트인 만큼 어려운 부분도 많았고, 약 9개월 간의 프로젝트 기간동안 4명이었던 멤버가 2명으로 줄어드는 등 우여곡절이 많이 있었다. 하지만 그만큼 의미있고 가장 기억에 남는 프로젝트이다. 
+        </div>
+      </li>
+      <li><h4>2015 스페셜 캘린더</h4></li>
+      <li><h4>2016 왓수다</h4></li>
+      <li><h4>2016 워킹데드</h4></li>
+      <li><h4>2016 스마트 카트</h4></li>
+      <li><h4>2017 썸띵라잌댓</h4></li>
+      <li><h4>2017 ??</h4></li>
     </ul>
 
       </div>
